# reachy-mini-script

./: README.md  pyproject.toml  rmscript_reference_doc.md
examples/: adapter_example.py  basic_usage.py  example.rmscript  run_rmscript.py  test_yaw.rmscript
src/rmscript/: __init__.py  ast_nodes.py  compiler.py  constants.py  ir.py  lexer.py  optimizer.py  parser.py  semantic.py  types.py
src/rmscript/adapters/: __init__.py  base.py
tests/: TEST_ORGANIZATION.md  __init__.py  test_adapters.py  test_compiler_api.py  test_compiler_unit.py  test_language_features.py  test_lexer.py  test_optimizer.py  test_parser.py  test_semantic.py  test_types.py
tests/integration/: __init__.py  test_control_flow.py  test_media_errors_edge_cases.py  test_movements.py
