[project]
name = "rmscript"
version = "0.1.0"
description = "A kid-friendly robot programming language for Reachy Mini"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24.0",
    "pytest>=9.0.1",
    "reachy_mini>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "scipy>=1.10.0",  # For testing rotation matrices
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
